update to run JMH from Gradle, added support for capnp